// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SaveRecipe Component should match snapshot when userType is logged 1`] = `
<body>
  <div>
    <div
      class="p-16 p-24_md p-32_lg max-w-328 min-w-720_md min-w-944_lg bg-positive rounded-4 overflow-hidden"
      data-testid="dialog"
      role="dialog"
    >
      <div
        class="flex flex-column gap-16 gap-24_md gap-32_lg"
      >
        <div
          class="flex flex-column ai-end"
          data-testid="dialog-header"
        >
          <button
            aria-label="Cerrar"
            title="Cerrar"
            variant="link"
          >
            <span>
              <span
                data-icon="close"
              >
                close
              </span>
            </span>
          </button>
        </div>
        <div
          data-testid="dialog-body"
        >
          <div
            data-testid="empty-state"
            data-variant="barrier-logged"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SaveRecipe Component should match snapshot when userType is subscribed 1`] = `
<body>
  <div>
    <div
      class="w-328 overflow-visible rounded-4 h-fit p-16 p-24_md p-32_lg gap-16 gap-24_md gap-32_lg bg-light-1"
      data-testid="dialog"
      role="dialog"
    >
      <div
        class="flex flex-column gap-16 gap-24_md gap-32_lg"
      >
        <div
          class="flex jc-between ai-center w-100 border border-bottom border-thin border-light-100 pb-16"
          data-testid="dialog-header"
        >
          <h2
            data-testid="header-title"
          >
            Save Recipe Title
          </h2>
          <button
            aria-label="Cerrar"
            title="Cerrar"
            variant="link"
          >
            <span>
              <span
                data-icon="close"
              >
                close
              </span>
            </span>
          </button>
        </div>
        <div
          data-testid="dialog-body"
        >
          <div
            data-testid="main-save-recipe"
          >
            MainSaveRecipe Component
            <select
              data-testid="collection-select"
            >
              <option
                value="new"
              >
                Crear colección
              </option>
              <option
                value="Collection1"
              >
                Collection1
              </option>
              <option
                value="Collection2"
              >
                Collection2
              </option>
            </select>
            <input
              data-testid="folder-input"
              placeholder="Colección"
              value="New Folder Name"
            />
          </div>
        </div>
        <div
          class="flex flex-column gap-16 gap-24_md gap-32_lg"
          data-testid="dialog-footer"
        >
          <hr />
          <div
            data-testid="footer-save-recipe"
          >
            FooterSaveRecipe Component
            <button
              data-testid="left-button"
              disabled=""
            >
              Left Button
            </button>
            <button
              data-testid="right-button"
            >
              Right Button
            </button>
            <span
              data-testid="has-error"
            >
              false
            </span>
            <span
              data-testid="mode"
            >
              save
            </span>
            <span
              data-testid="is-disabled"
            >
              true
            </span>
            <span
              data-testid="is-loading"
            >
              false
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SaveRecipe Component should match snapshot when userType is unlogged 1`] = `
<body>
  <div>
    <div
      class="p-16 p-24_md p-32_lg max-w-328 min-w-720_md min-w-944_lg bg-positive rounded-4 overflow-hidden"
      data-testid="dialog"
      role="dialog"
    >
      <div
        class="flex flex-column gap-16 gap-24_md gap-32_lg"
      >
        <div
          class="flex flex-column ai-end"
          data-testid="dialog-header"
        >
          <button
            aria-label="Cerrar"
            title="Cerrar"
            variant="link"
          >
            <span>
              <span
                data-icon="close"
              >
                close
              </span>
            </span>
          </button>
        </div>
        <div
          data-testid="dialog-body"
        >
          <div
            data-testid="empty-state"
            data-variant="barrier-unlogged"
          />
        </div>
      </div>
    </div>
  </div>
</body>
`;
